:bug: Content and cards will no longer overflow viewport width

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -207,6 +207,7 @@ body > div > div {
 
 #content {
     grid-area: content;
+    max-width: 100vw;
     padding: 1rem;
     background-color: white;
 }
@@ -315,7 +316,7 @@ footer.page-navigation > a {
 
 .content-grid {
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(20rem, 1fr));
+    grid-template-columns: repeat(auto-fill, minmax(10rem, 1fr));
     grid-gap: 3rem;
 }
 
@@ -329,6 +330,10 @@ footer.page-navigation > a {
 
     #footer section {
         min-width: 299px;
+    }
+
+    .content-grid {
+        grid-template-columns: repeat(auto-fill, minmax(20rem, 1fr))
     }
     
 }
